--- a/src/templates/password-reset.hbs
+++ b/src/templates/password-reset.hbs
@@ -3,7 +3,7 @@
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Verify Your Account</title>
+    <title>Reset your password</title>
   </head>
   <body>
     <div
@@ -24,27 +24,32 @@
         <h1 style='margin: 0'>SPARX</h1>
       </div>
 
-      <h2>Welcome to Sparx, {{username}}!</h2>
+      <h2>Reset your password</h2>
 
       <div style='margin: 1rem 0;'>
         <p>
-          We're excited to have you onboard. To get started and ensure a secure
-          experience, please verify your email address by clicking the button
-          below.
+          Hey
+          {{username}},
         </p>
         <p>
-          The verification link will expire in 24 hours.
+          We received a request to reset the password for your Sparx account.
+          Click the button below to proceed. The link will expire in 2 hours.
         </p>
       </div>
 
       <a
-        href='{{url}}'
+        href={{url}}
         style='display: inline-block; padding: 10px 20px; background-color: #4f46e5; color: #ffffff; border: none; border-radius: 5px; text-decoration: none; box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3); margin-top: 2rem; margin-bottom: 1rem;'
-      >Verify Email</a>
+      >Reset Password</a>
 
       <p style='color: #94a3b8; font-size: 0.8rem;'>
-        If you didn't sign up for Sparx, you can safely ignore this email.
-        Ensure you're on the official Sparx site before taking any actions.
+        If you didn't request a password reset, no further action is needed.
+        However, do ensure the security of your account and be cautious of any
+        suspicious activities.
+      </p>
+      <p style='color: #94a3b8; font-size: 0.8rem;'>
+        For your safety, never share the reset link, and ensure you're on the
+        official Sparx site before entering any details.
       </p>
     </div>
   </body>
