adjusting app name to sparx

--- a/src/templates/password-changed.hbs
+++ b/src/templates/password-changed.hbs
@@ -17,11 +17,11 @@
         >
           <img
             src='https://res.cloudinary.com/dwkvw91pm/image/upload/v1709739973/k5pokg1gtvcmsl2ougpk.png'
-            alt='navinotes logo'
+            alt='sparx logo'
             style='height: 100%; width: 100%;'
           />
         </div>
-        <h1 style='margin: 0'>NAVINOTES</h1>
+        <h1 style='margin: 0'>SPARX</h1>
       </div>
 
       <h2>Password Changed</h2>
@@ -40,8 +40,8 @@
       </div>
 
       <p style='color: #94a3b8; font-size: 0.8rem;'>
-        Remember, Navinotes will never ask for your password or personal
-        information in emails. Always be cautious of suspicious emails.
+        Remember, Sparx will never ask for your password or personal information
+        in emails. Always be cautious of suspicious emails.
       </p>
     </div>
   </body>
