--- a/src/templates/password-reset.hbs
+++ b/src/templates/password-reset.hbs
@@ -17,11 +17,11 @@
         >
           <img
             src='https://res.cloudinary.com/dwkvw91pm/image/upload/v1709739973/k5pokg1gtvcmsl2ougpk.png'
-            alt='navinotes logo'
+            alt='sparx logo'
             style='height: 100%; width: 100%;'
           />
         </div>
-        <h1 style='margin: 0'>NAVINOTES</h1>
+        <h1 style='margin: 0'>SPARX</h1>
       </div>
 
       <h2>Reset your password</h2>
@@ -32,9 +32,8 @@
           {{username}},
         </p>
         <p>
-          We received a request to reset the password for your Navinotes
-          account. Click the button below to proceed. The link will expire in 2
-          hours.
+          We received a request to reset the password for your Sparx account.
+          Click the button below to proceed. The link will expire in 2 hours.
         </p>
       </div>
 
@@ -50,7 +49,7 @@
       </p>
       <p style='color: #94a3b8; font-size: 0.8rem;'>
         For your safety, never share the reset link, and ensure you're on the
-        official Navinotes site before entering any details.
+        official Sparx site before entering any details.
       </p>
     </div>
   </body>
