--- a/src/templates/invitation.hbs
+++ b/src/templates/invitation.hbs
@@ -17,19 +17,19 @@
         >
           <img
             src='https://res.cloudinary.com/dwkvw91pm/image/upload/v1709739973/k5pokg1gtvcmsl2ougpk.png'
-            alt='navinotes logo'
+            alt='sparx logo'
             style='height: 100%; width: 100%;'
           />
         </div>
-        <h1 style='margin: 0'>NAVINOTES</h1>
+        <h1 style='margin: 0'>SPARX</h1>
       </div>
 
-      <h2>Join your team on Navinotes</h2>
+      <h2>Join your team on Sparx</h2>
 
       <div style='margin: 1rem 0;'>
         <p class='main-text'>
           {{username}}
-          has invited you to use Navinotes with them, in a workspace called
+          has invited you to use Sparx with them, in a workspace called
           <span class='workspace-name'>{{workspaceName}}</span>
         </p>
         <a
@@ -39,8 +39,8 @@
       </div>
 
       <p style='color: #94a3b8; font-size: 0.8rem;'>
-        Remember, Navinotes will never ask for your password or personal
-        information in emails. Always be cautious of suspicious emails.
+        Remember, Sparx will never ask for your password or personal information
+        in emails. Always be cautious of suspicious emails.
       </p>
     </div>
   </body>
