--- a/src/templates/verification.hbs
+++ b/src/templates/verification.hbs
@@ -17,14 +17,14 @@
         >
           <img
             src='https://res.cloudinary.com/dwkvw91pm/image/upload/v1709739973/k5pokg1gtvcmsl2ougpk.png'
-            alt='navinotes logo'
+            alt='sparx logo'
             style='height: 100%; width: 100%;'
           />
         </div>
-        <h1 style='margin: 0'>NAVINOTES</h1>
+        <h1 style='margin: 0'>SPARX</h1>
       </div>
 
-      <h2>Welcome to Navinotes, {{username}}!</h2>
+      <h2>Welcome to Sparx, {{username}}!</h2>
 
       <div style='margin: 1rem 0;'>
         <p>
@@ -43,8 +43,8 @@
       >Verify Email</a>
 
       <p style='color: #94a3b8; font-size: 0.8rem;'>
-        If you didn't sign up for Navinotes, you can safely ignore this email.
-        Ensure you're on the official Navinotes site before taking any actions.
+        If you didn't sign up for Sparx, you can safely ignore this email.
+        Ensure you're on the official Sparx site before taking any actions.
       </p>
     </div>
   </body>
